# yahtzee

./: Cargo.toml
src/: lib.rs  network.rs  yahtzee.rs
www/: .firebaserc  bevy_test.js  index.html  script.js  style.css  yahtzee.js
www/assets/: yahtzee_cup.glb
www/assets/starter_3d_dice_pack/dice_red_out/: dice_red.gltf
www/public/: index.html  yahtzee.js
www/public/assets/dice_yellow/: dice_yellow.gltf
