[package]
name = "yahtzee"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.8.0"
js-sys = "0.3.57"
wasm-bindgen = "0.2.83"
log = "0.4.17"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
bevy_rapier3d = "0.16.2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 2